--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Yuming Jiang - Homepage</title>
+  <title>Sitan Li - Homepage</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-D41DLSC2BJ"></script>
   <script>
@@ -272,14 +272,11 @@
     <div class="section">
       <h2>About me</h2>
       <div class="paper">
-        I am currently a Ph.D. student at <a href="https://www.mmlab-ntu.com/" target="_blank">MMLab@NTU</a>, <a
+        I am currently a Ph.D. student at <a
           href="https://www.ntu.edu.sg/" target="_blank">Nanyang Technological University</a>, supervised by <a
-          href="https://liuziwei7.github.io/" target="_blank">Prof. Ziwei Liu</a> and <a
-          href="http://personal.ie.cuhk.edu.hk/~ccloy/" target="_blank">Prof. Chen Change Loy</a>.
-        I got my bachelor degree in computer science from Yingcai Honors College, <a href="https://www.uestc.edu.cn/"
-          target="_blank">University of Electronic Science and Technology of China</a> (UESTC).
-        I am awareded Google PhD Fellowship in 2022.
-        My research interests include image generation, manipulation and restoration.
+          href="https://www3.ntu.edu.sg/home/ECCCheah/index.html" target="_blank">Prof. Chien Chern CHEAH</a> .
+        I got my bachelor degree in Xi'an Jiaotong University.
+        My research interests include Robotics and deep learning.
       </div>
     </div>
 
