--- a/index.html
+++ b/index.html
@@ -253,15 +253,11 @@
       <img title="Yuming" style="float: left; padding-left: 1.0em; padding-right: 4.0em; height: 200px;"
         src="images/photo_new.JPG" />
       <div style="padding-left: 4em; vertical-align: top; height: 250px;">
-        <span style="font-size: 16pt; line-height: 200%; font-weight:bold">Yuming Jiang 姜瑜铭</span><br />
+        <span style="font-size: 16pt; line-height: 200%; font-weight:bold">Sitan Li 李思坦</span><br />
         <span style="line-height: 250%;">Ph.D. Student</span><br />
-        <span style="line-height: 200%;">MMLab@NTU, S-Lab</span><br />
         <span>Nanyang Technological University, Singapore</span><br />
-        <span style="line-height: 300%;">Email: yuming002 at e.ntu.edu.sg</span><br />
+        <span style="line-height: 300%;">Email: sitan001 at e.ntu.edu.sg</span><br />
         <a href="https://scholar.google.com/citations?user=rU4OT14AAAAJ&hl=en" target="_blank">Google Scholar</a> /
-        <a href="https://github.com/yumingj" target="_blank">GitHub</a> /
-        <a href="https://www.linkedin.com/in/yuming-jiang-b9a474139/" target="_blank">LinkedIn</a> /
-        <a href="https://twitter.com/Jiang_Yuming" target="_blank">Twitter</a>
       </div>
     </div>
   </div>
