--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
   <div style="margin-bottom: 1em; border: 1px solid #ddd; background-color: #fff; padding: 1em; height: 200px;">
     <div style="margin: 0 auto; width: 100%; line-height: 130%;">
       <img title="Yuming" style="float: left; padding-left: 1.0em; padding-right: 4.0em; height: 200px;"
-        src="images/photo_new.JPG" />
+        src="images/sitanli.jpeg" />
       <div style="padding-left: 4em; vertical-align: top; height: 250px;">
         <span style="font-size: 16pt; line-height: 200%; font-weight:bold">Sitan Li 李思坦</span><br />
         <span style="line-height: 250%;">Ph.D. Student</span><br />
