--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <span style="line-height: 250%;">Ph.D. Student</span><br />
         <span>Nanyang Technological University, Singapore</span><br />
         <span style="line-height: 300%;">Email: sitan001 at e.ntu.edu.sg</span><br />
-        <a href="https://scholar.google.com/citations?user=rU4OT14AAAAJ&hl=en" target="_blank">Google Scholar</a> /
+        <a href="https://ieeexplore.ieee.org/author/37089290999" target="_blank">IEEE Xplore</a> /
       </div>
     </div>
   </div>
