--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <span style="line-height: 250%;">Ph.D. Student</span><br />
         <span>Nanyang Technological University, Singapore</span><br />
         <span style="line-height: 300%;">Email: sitan001 at e.ntu.edu.sg</span><br />
-        <a href="https://ieeexplore.ieee.org/author/37089290999" target="_blank">IEEE Xplore</a> /
+        <a href="https://ieeexplore.ieee.org/author/37089290999" target="_blank">IEEE Xplore</a> 
       </div>
     </div>
   </div>
@@ -270,7 +270,7 @@
       <div class="paper">
         I am currently a Ph.D. student at <a
           href="https://www.ntu.edu.sg/" target="_blank">Nanyang Technological University</a>, supervised by <a
-          href="https://www3.ntu.edu.sg/home/ECCCheah/index.html" target="_blank">Prof. Chien Chern CHEAH</a> .
+          href="https://www3.ntu.edu.sg/home/ECCCheah/index.html" target="_blank">Prof. Chien Chern CHEAH</a>.
         I got my bachelor degree in Xi'an Jiaotong University.
         My research interests include Robotics and deep learning.
       </div>
