--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
       <!--------------------------------------------------------------------------->
     </div>
 
-    <div class="section">
+<!--     <div class="section">
       <h2 id="reports">Honors and Awards</h2>
       <div class="paper" id="honors">
         <li>ICLR Notable Reviewer, 2023</li>
@@ -537,7 +537,7 @@
         <div class="spanner"></div>
       </div>
       <!--------------------------------------------------------------------------->
-    </div>
+    </div> -->
 
     <div class="section">
       <h2 id="reports">Teaching</h2>
