--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
         <div class="spanner"></div>
       </div>
       <!--------------------------------------------------------------------------->
-    </div> -->
+<!--     </div> --> -->
 
     <div class="section">
       <h2 id="reports">Teaching</h2>
