--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     </div>
 
     <div class="section">
-      <h2 id="reports">Selected Publications</h2>
+      <h2 id="reports">Publications</h2>
       <!--arxiv 2023 text2performer -->
       <div class="paper" id="ReVersion">
         <img class="paper" title="ReVersion" src="./images/text2performer_logo.png">
@@ -298,7 +298,7 @@
         </div>
         <div class="spanner"></div>
       </div>
-      <!--arxiv 2023 reversion -->
+<!--       <!--arxiv 2023 reversion -->
       <div class="paper" id="ReVersion">
         <img class="paper" title="ReVersion" src="./images/reversion_logo.png">
         <div>
@@ -505,7 +505,7 @@
         </div>
         <div class="spanner"></div>
         <!--------------------------------------------------------------------------->
-      </div>
+      </div> -->
     </div>
 
     <div class="section">
