--- a/index.html
+++ b/index.html
@@ -282,19 +282,19 @@
       <div class="paper" id="ReVersion">
         <img class="paper" title="ReVersion" src="./images/text2performer_logo.png">
         <div>
-          <strong>Text2Performer: Text-Driven Human Video Generation </strong>
+          <strong>A Theoretical Framework for End-to-End Learning of Deep Neural Networks With Applications to Robotics </strong>
           <br>
           <br>
-          <strong>Yuming Jiang</strong>, Shuai Yang, Tong Liang Koh, Wayne Wu, Chen Change Loy, Ziwei Liu
+          <strong>Sitan Li</strong>, Huu-Thiet Nguyen, Chien Chern Cheah
           <br>
           <br>
-          <em>arXiv, 2023</em>
+          <em>IEEE ACCESS, 2023</em>
           <br>
           <br>
 
-          <a href="https://arxiv.org/pdf/2304.08483.pdf" target="_blank"> PDF </a> /
-          <a href="https://yumingj.github.io/projects/Text2Performer.html" target="_blank"> Project Page </a> /
-          <a href="https://github.com/yumingj/Text2Performer" target="_blank"> Code </a>
+          <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10053845" target="_blank"> PDF </a> /
+<!--           <a href="https://yumingj.github.io/projects/Text2Performer.html" target="_blank"> Project Page </a> /
+          <a href="https://github.com/yumingj/Text2Performer" target="_blank"> Code </a> -->
         </div>
         <div class="spanner"></div>
       </div>
