--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
       <h2 id="reports">Publications</h2>
       <!--arxiv 2023 text2performer -->
       <div class="paper" id="ReVersion">
-        <img class="paper" title="ReVersion" src="./images/text2performer_logo.png">
+        <img class="paper" title="ReVersion" src="./images/e2e.jpg">
         <div>
           <strong>A Theoretical Framework for End-to-End Learning of Deep Neural Networks With Applications to Robotics </strong>
           <br>
