--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
           <br>
           <br>
 
-          <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10053845" target="_blank"> PDF </a> /
+          <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10053845" target="_blank"> PDF </a> 
 <!--           <a href="https://yumingj.github.io/projects/Text2Performer.html" target="_blank"> Project Page </a> /
           <a href="https://github.com/yumingj/Text2Performer" target="_blank"> Code </a> -->
         </div>
