--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
     <div class="section">
       <h2 id="reports">Publications</h2>
-      <!--arxiv 2023 text2performer -->
+      <!--ieeeaccess 2023 e2e -->
       <div class="paper" id="ReVersion">
         <img class="paper" title="ReVersion" src="./images/e2e.jpg">
         <div>
@@ -298,6 +298,27 @@
         </div>
         <div class="spanner"></div>
       </div>
+       <!--ieeeacess 2022 layerwise -->
+      <div class="paper" id="ReVersion">
+        <img class="paper" title="ReVersion" src="./images/e2e.jpg">
+        <div>
+          <strong>A Layer-Wise Theoretical Framework for Deep Learning of Convolutional Neural Networks </strong>
+          <br>
+          <br>
+          <strong> Huu-Thiet Nguyen, Sitan Li</strong>,Chien Chern Cheah
+          <br>
+          <br>
+          <em>IEEE ACCESS, 2022</em>
+          <br>
+          <br>
+
+          <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9698045" target="_blank"> PDF </a> 
+<!--           <a href="https://yumingj.github.io/projects/Text2Performer.html" target="_blank"> Project Page </a> /
+          <a href="https://github.com/yumingj/Text2Performer" target="_blank"> Code </a> -->
+        </div>
+        <div class="spanner"></div>
+      </div>
+      
 <!--       <!--arxiv 2023 reversion -->
       <div class="paper" id="ReVersion">
         <img class="paper" title="ReVersion" src="./images/reversion_logo.png">
