--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       </div>
        <!--ieeeacess 2022 layerwise -->
       <div class="paper" id="ReVersion">
-        <img class="paper" title="ReVersion" src="./images/e2e.jpg">
+        <img class="paper" title="ReVersion" src="./images/layerwise.png">
         <div>
           <strong>A Layer-Wise Theoretical Framework for Deep Learning of Convolutional Neural Networks </strong>
           <br>
