--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
           <strong>A Layer-Wise Theoretical Framework for Deep Learning of Convolutional Neural Networks </strong>
           <br>
           <br>
-          <strong> Huu-Thiet Nguyen, Sitan Li</strong>,Chien Chern Cheah
+           Huu-Thiet Nguyen, Sitan Li</strong>,Chien Chern Cheah
           <br>
           <br>
           <em>IEEE ACCESS, 2022</em>
