--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
           <strong>A Layer-Wise Theoretical Framework for Deep Learning of Convolutional Neural Networks </strong>
           <br>
           <br>
-           Huu-Thiet Nguyen, <strong> Sitan Li,Chien Chern Cheah
+           Huu-Thiet Nguyen, <strong> Sitan Li</strong>,Chien Chern Cheah
           <br>
           <br>
           <em>IEEE ACCESS, 2022</em>
@@ -319,215 +319,29 @@
         <div class="spanner"></div>
       </div>
       
-<!--       <!--arxiv 2023 reversion -->
+       <!--lcss 2023 colla -->
       <div class="paper" id="ReVersion">
-        <img class="paper" title="ReVersion" src="./images/reversion_logo.png">
+        <img class="paper" title="ReVersion" src="./images/layerwise.png">
         <div>
-          <strong>ReVersion: Diffusion-Based Relation Inversion from Images </strong>
+          <strong>An Analytic End-to-End Deep Learning Algorithm based on Collaborative Learning  </strong>
           <br>
           <br>
-          Ziqi Huang*, Tianxing Wu*, <strong>Yuming Jiang</strong>, Kelvin C.K. Chan, Ziwei Liu
+            <strong>Sitan Li</strong>,  Chien Chern Cheah
           <br>
           <br>
-          <em>arXiv, 2023</em>
+<!--           <em>IEEE ACCESS, 2022</em> -->
           <br>
           <br>
 
-          <a href="https://arxiv.org/pdf/2303.13495.pdf" target="_blank"> PDF </a> /
-          <a href="https://ziqihuangg.github.io/projects/reversion.html" target="_blank"> Project Page </a> /
-          <a href="https://github.com/ziqihuangg/ReVersion" target="_blank"> Code </a>
+          <a href="https://lisitan97.github.io/paper/extended_version.pdf" target="_blank"> PDF </a> 
+<!--           <a href="https://yumingj.github.io/projects/Text2Performer.html" target="_blank"> Project Page </a> /
+          <a href="https://github.com/yumingj/Text2Performer" target="_blank"> Code </a> -->
         </div>
         <div class="spanner"></div>
       </div>
-      <!--cvpr 2023 colab diffusion -->
-      <div class="paper" id="coldiffusion">
-        <img class="paper" title="coldiffusion" src="./images/coldiffusion_logo.png">
-        <div>
-          <strong>Collaborative Diffusion for Multi-Modal Face Generation and Editing </strong>
-          <br>
-          <br>
-          Ziqi Huang, Kelvin C.K. Chan, <strong>Yuming Jiang</strong>, Ziwei Liu
-          <br>
-          <br>
-          <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023</em>
-          <br>
-          <br>
+      
 
-          <a href="https://yumingj.github.io" target="_blank"> PDF </a> /
-          <a href="https://yumingj.github.io" target="_blank"> Code </a>
-        </div>
-        <div class="spanner"></div>
-      </div>
-      <!--pami 2023 C2-Matching-->
-      <!--------------------------------------------------------------------------->
-      <div class="paper" id="stylehuman">
-        <img class="paper" title="stylehuman" src="./images/c2_pami.png">
-        <div>
-          <strong>Reference-based Image and Video Super-Resolution via C2-Matching </strong>
-          <br>
-          <br>
-          <strong>Yuming Jiang</strong>, Kelvin C.K. Chan, Xintao Wang, Chen Change Loy, Ziwei Liu
-          <br>
-          <br>
-          <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2023</em>
-          <br>
-          <br>
-
-          <a href="https://arxiv.org/pdf/2212.09581.pdf" target="_blank"> PDF </a> /
-          <a href="https://github.com/yumingj/C2-Matching" target="_blank"> Code </a>
-        </div>
-        <div class="spanner"></div>
-      </div>
-      <!--siggraph2022 Text2Human-->
-      <!--------------------------------------------------------------------------->
-      <div class="paper" id="stylehuman">
-        <img class="paper" title="stylehuman" src="./images/siggraph22_text2human.jpg">
-        <div>
-          <strong>Text2Human: Text-Driven Controllable Human Image Generation </strong>
-          <br>
-          <br>
-          <strong>Yuming Jiang</strong>, Shuai Yang, Haonan Qiu, Wayne Wu, Chen Change Loy,<br>
-          Ziwei Liu
-          <br>
-          <br>
-          <em>ACM Transactions on Graphics (SIGGRAPH), 2022</em>
-          <br>
-          <br>
-
-          <a href="https://arxiv.org/pdf/2205.15996.pdf" target="_blank"> PDF </a> /
-          <a href="https://yumingj.github.io/projects/Text2Human.html" target="_blank"> Project Page </a> /
-          <a href="https://github.com/yumingj/Text2Human" target="_blank"> Code </a> /
-          <a href="https://github.com/yumingj/DeepFashion-MultiModal" target="_blank"> Dataset </a>
-        </div>
-        <div class="spanner"></div>
-      </div>
-      <!--stylehuman-->
-      <!--------------------------------------------------------------------------->
-      <div class="paper" id="stylehuman">
-        <img class="paper" title="stylehuman" src="./images/stylehuman.png">
-        <div>
-          <strong>StyleGAN-Human: A Data-Centric Odyssey of Human Generation </strong>
-          <br>
-          <br>
-          Jianglin Fu*, Shikai Li*, <strong>Yuming Jiang</strong>, Kwan-Yee Lin, Chen Qian, Chen Change Loy, Wayne Wu,
-          Ziwei Liu
-          <br>
-          <br>
-          <em>European Conference on Computer Vision (ECCV), 2022</em>
-          <br>
-          <br>
-
-          <a href="https://arxiv.org/pdf/2204.11823.pdf" target="_blank"> PDF </a> /
-          <a href="https://stylegan-human.github.io/" target="_blank"> Project Page </a> /
-          <a href="https://github.com/stylegan-human/StyleGAN-Human/" target="_blank"> Code </a>
-        </div>
-        <div class="spanner"></div>
-      </div>
-      <div class="paper" id="stylefacev">
-        <img class="paper" title="stylefacev" src="./images/stylefacev_logo.png">
-        <div>
-          <strong>StyleFaceV: Face Video Generation via Decomposing and Recomposing Pretrained StyleGAN3 </strong>
-          <br>
-          <br>
-          Haonan Qiu, <strong>Yuming Jiang</strong>, Hang Zhou, Wayne Wu, Ziwei Liu.
-          <br>
-          <br>
-          <em>arXiv, 2022</em>
-          <br>
-          <br>
-
-          <a href="https://arxiv.org/pdf/2208.07862.pdf" target="_blank"> PDF </a> /
-          <a href="http://haonanqiu.com/projects/StyleFaceV.html" target="_blank"> Project Page </a> /
-          <a href="https://github.com/arthur-qiu/StyleFaceV" target="_blank"> Code </a>
-        </div>
-        <div class="spanner"></div>
-      </div>
-      <!--iccv21-->
-      <!--------------------------------------------------------------------------->
-      <div class="paper" id="iccv21_talk_to_edit">
-        <img class="paper" title="iccv21_talk_to_edit" src="./images/iccv21_talk_to_edit.jpeg">
-        <div>
-          <strong>Talk-to-Edit: Fine-Grained Facial Editing via Dialog </strong>
-          <br>
-          <br>
-          <strong>Yuming Jiang*</strong>, Ziqi Huang*, Xingang Pan, Chen Change Loy, Ziwei Liu
-          <br>
-          <br>
-          <em>International Conference on Computer Vision (ICCV), 2021</em>
-          <br>
-          <br>
-
-          <a href="https://arxiv.org/abs/2109.04425" target="_blank"> PDF </a> /
-          <a href="https://www.mmlab-ntu.com/project/talkedit/" target="_blank"> Project Page </a> /
-          <a href="https://github.com/yumingj/Talk-to-Edit" target="_blank"> Code </a> /
-          <a href="http://mmlab.ie.cuhk.edu.hk/projects/CelebA/CelebA_Dialog.html" target="_blank"> Dataset </a>
-        </div>
-        <div class="spanner"></div>
-      </div>
-      <!--cvpr21-->
-      <!--------------------------------------------------------------------------->
-      <div class="paper" id="cvpr21_c2_matching">
-        <img class="paper" title="cvpr21_c2_matching" src="./images/cvpr21_c2_matching.png">
-        <div>
-          <strong>Robust Reference-based Super-Resolution via C2-Matching </strong>
-          <br>
-          <br>
-          <strong>Yuming Jiang</strong>, Kelvin C.K. Chan, Xintao Wang, Chen Change Loy, Ziwei Liu
-          <br>
-          <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2021</em>
-          <br>
-          <br>
-
-          <a href="https://arxiv.org/abs/2106.01863" target="_blank"> PDF </a> /
-          <a href="./projects/C2_matching.html" target="_blank"> Project Page </a> /
-          <a href="https://github.com/yumingj/C2-Matching" target="_blank"> Code </a> /
-          <a href="https://drive.google.com/drive/folders/1Pt7blJA2cK4oQ6yWB9tcHerZ4pwICmxp?usp=sharing"
-            target="_blank"> Dataset </a>
-        </div>
-        <div class="spanner"></div>
-      </div>
-      <!--------------------------------------------------------------------------->
-      <!--tbme19-->
-      <!--------------------------------------------------------------------------->
-      <div class="paper" id="tbme19_jointrcnn">
-        <img class="paper" title="tbme19_jointrcnn" src="./images/tbme19_jointrcnn.png">
-        <div>
-          <strong>JointRCNN: A Region-based Convolutional Neural Network for Optic Disc and Cup Segmentation </strong>
-          <br>
-          <br>
-          <strong>Yuming Jiang</strong>, Lixin Duan, Jun Cheng, Zaiwang Gu, Hu Xia, Huazhu Fu, Changsheng Li and Jiang
-          Liu
-          <br>
-          <em>IEEE Transactions on Biomedical Engineering (TBME), 2019</em>
-          <br>
-          <br>
-
-          <a href="https://ieeexplore.ieee.org/document/8698800" target="_blank"> PDF </a>
-        </div>
-        <div class="spanner"></div>
-      </div>
-
-      <!--embc18-->
-      <!--------------------------------------------------------------------------->
-      <div class="paper" id="embc18">
-        <img class="paper" title="embc18" src="./images/embc18.png">
-        <div>
-          <strong>Optic Disc and Cup Segmentation with Blood Vessel Removal from Fundus Images for Glaucoma Detection
-          </strong>
-          <br>
-          <br>
-          <strong>Yuming Jiang</strong>, Hu Xia, Yanwu Xu, Jun Cheng, Huazhu Fu, Lixin Duan, Zhigang Meng and Jiang Liu
-          <br>
-          <em>International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC), 2018</em>
-          <br>
-          <br>
-
-          <a href="https://ieeexplore.ieee.org/document/8512400" target="_blank"> PDF </a>
-        </div>
-        <div class="spanner"></div>
-        <!--------------------------------------------------------------------------->
-      </div> -->
-    </div>
+<!--     </div> -->
 
     <div class="section">
       <h2 id="reports">Professional Service</h2>
