--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
 <!--     </div> -->
 
-    <div class="section">
+<!--     <div class="section">
       <h2 id="reports">Professional Service</h2>
       <div class="paper" id="reviewers">
         <li>Conference Reviewer: ICCV 2023, ICML 2023, CVPR 2023, ICLR 2023, AAAI 2023, NeurIPS 2022, ECCV 2022, AAAI
@@ -354,7 +354,7 @@
         <div class="spanner"></div>
       </div>
       <!--------------------------------------------------------------------------->
-    </div>
+    </div> -->
 
 <!--     <div class="section">
       <h2 id="reports">Honors and Awards</h2>
@@ -377,11 +377,9 @@
     <div class="section">
       <h2 id="reports">Teaching</h2>
       <div class="paper" id="teaching">
-        <li>Teaching Assistant: CE1115 Introduction to Data Science & Artificial Intelligence, NTU, 2021 Spring </li>
-        <li>Teaching Assistant: CE2101 Algorithm Design & Analysis, NTU, 2022 Spring </li>
-        <li>Teaching Assistant: AI6126 Advanced Computer Vision, NTU, 2022 Spring </li>
-        <li>Teaching Assistant: CE7454 Deep Learning for Data Science, NTU, 2022 Fall </li>
-        <li>Teaching Assistant: AI6126 Advanced Computer Vision, NTU, 2023 Spring </li>
+        <li>Teaching Assistant: IE0005 Introduction to Data Science & Artificial Intelligence, NTU, 2022 Fall </li>
+        <li>Teaching Assistant: EE4504 Design of Clean Energy Systems , NTU, 2023 Spring </li>
+     
         <div class="spanner"></div>
       </div>
       <!--------------------------------------------------------------------------->
