--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       
        <!--lcss 2023 colla -->
       <div class="paper" id="ReVersion">
-        <img class="paper" title="ReVersion" src="./images/layerwise.png">
+        <img class="paper" title="ReVersion" src="./images/ensemble2.jpg">
         <div>
           <strong>An Analytic End-to-End Deep Learning Algorithm based on Collaborative Learning  </strong>
           <br>
@@ -346,11 +346,7 @@
 <!--     <div class="section">
       <h2 id="reports">Professional Service</h2>
       <div class="paper" id="reviewers">
-        <li>Conference Reviewer: ICCV 2023, ICML 2023, CVPR 2023, ICLR 2023, AAAI 2023, NeurIPS 2022, ECCV 2022, AAAI
-          2022, ICCV
-          2021, CVPR
-          2021, AAAI 2021 </li>
-        <li>Journal Reviewer: IJCV, TIP, TMI, Neurocomputing</li>
+        <li>Journal Reviewer: Automatica</li>
         <div class="spanner"></div>
       </div>
       <!--------------------------------------------------------------------------->
