--- a/index.html
+++ b/index.html
@@ -343,32 +343,16 @@
 
 <!--     </div> -->
 
-<!--     <div class="section">
+    <div class="section">
       <h2 id="reports">Professional Service</h2>
       <div class="paper" id="reviewers">
         <li>Journal Reviewer: Automatica</li>
         <div class="spanner"></div>
       </div>
-      <!--------------------------------------------------------------------------->
-    </div> -->
+    
+    </div> 
 
-<!--     <div class="section">
-      <h2 id="reports">Honors and Awards</h2>
-      <div class="paper" id="honors">
-        <li>ICLR Notable Reviewer, 2023</li>
-        <li>Google PhD Fellowship, 2022</li>
-        <li>NTU Research Scholarship, 2021 </li>
-        <li>The Most Outstanding Students Award of UESTC (10 awardees per year), 2019</li>
-        <li>Sichuan Provincial Outstanding Graduates, 2019</li>
-        <li>Outstanding Undergraduate Thesis Award, 2019</li>
-        <li>National Scholarship, 2016, 2017, 2018</li>
-        <li>Tanglixin Scholarship, 2017</li>
-        <li>Shiqiang Scholarship, 2017</li>
-        <li>Meritorious Winner in the Interdisciplinary Contest in Modeling (ICM), 2017</li>
-        <div class="spanner"></div>
-      </div>
-      <!--------------------------------------------------------------------------->
-<!--     </div> --> -->
+
 
     <div class="section">
       <h2 id="reports">Teaching</h2>
