--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Sitan Li - Homepage</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D41DLSC2BJ"></script>
+<!--   <script async src="https://www.googletagmanager.com/gtag/js?id=G-D41DLSC2BJ"></script> -->
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
